# temet-jira

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: jira-ticket-manager.md
.claude/commands/jira/: README.md  analyze-states.md  batch-create.md  comment.md  config.md  create-epic.md  create-ticket.md  create.md  enrich-epic.md  epic-details.md  epics.md  export.md  get.md  my-tickets.md  search.md  setup.md  transitions.md  update.md
.claude/skills/build-jira-document-format/: SKILL.md
.claude/skills/build-jira-document-format/examples/: examples.md
.claude/skills/jira/: SKILL.md
.claude/skills/jira-api/: SKILL.md
.claude/skills/jira-api/examples/: examples.md
.claude/skills/jira-api/references/: reference.md
.claude/skills/jira-builders/: SKILL.md
.claude/skills/jira-builders/references/: QUICK_REFERENCE.md  TOOL_SELECTION.md
.claude/skills/jira/references/: jira-api-patterns.md  jira-batch-operations.md  jira-document-formatting.md  jira-state-analysis.md
.claude/skills/jira/references/jira-analyze-states/: SKILL.md
.claude/skills/jira/references/jira-batch-create/: SKILL.md
.claude/skills/jira/references/jira-design-state-analyzer/: SKILL.md
.claude/skills/jira/references/jira-enrich-epic/: SKILL.md
.claude/skills/jira/references/jira-export-and-analyze-data/: SKILL.md
.claude/skills/work-with-adf/: SKILL.md
.claude/skills/work-with-adf/examples/: examples.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/guides/: getting_started.md  jira_setup.md  python_api_guide.md  usage_guide.md
docs/reference/: cli_reference.md
docs/superpowers/plans/: 2026-03-18-generic-issue-type-support.md
docs/superpowers/specs/: 2026-03-18-generic-issue-type-support-design.md
src/jira_tool/: cli.py  client.py  config.py  mcp_server.py
src/jira_tool/document/: __init__.py
src/jira_tool/document/adf/: extractor.py
src/jira_tool/document/builders/: __init__.py  base.py  epic.py  issue.py  profiles.py  sections.py  subtask.py  typed.py
src/jira_tool/document/display/: __init__.py  panels.py
src/temet_jira/: __init__.py  cli.py  client.py  config.py  formatter.py  integration.py  mcp_server.py
src/temet_jira/analysis/: __init__.py  formatters.py  state_analyzer.py
src/temet_jira/document/: __init__.py
src/temet_jira/document/adf/: __init__.py  extractor.py
src/temet_jira/document/builders/: __init__.py  base.py  epic.py  issue.py  sections.py  subtask.py  typed.py
src/temet_jira/document/display/: __init__.py  formatters.py  panels.py  tables.py
src/temet_jira/document/nodes/: __init__.py  base.py  block.py  inline.py  marks.py
src/temet_jira/scripts/: __init__.py  create_issue_under_epic.py
src/temet_jira/ui/: __init__.py  console.py  prompts.py  status.py  symbols.py  theme.py
tests/: conftest.py  test_cli_formatter_e2e.py  test_cli_formatter_integration.py  test_cli_integration.py  test_cli_search_options.py  test_client.py  test_mcp_server.py
tests/analysis/: test_calculate_durations.py  test_formatters.py  test_formatters_integration.py  test_formatters_json.py  test_formatters_jsonl.py  test_formatters_table.py  test_module_structure.py  test_state_analyzer.py  test_state_analyzer_integration.py
tests/cli/: test_analyze_command.py  test_analyze_integration.py  test_create_refactor.py  test_get.py  test_jira_analyze.py  test_types_command.py
tests/document/: test_adf_extractor.py  test_builder_compat.py  test_display_formatters.py  test_display_panels.py  test_display_tables.py  test_profiles.py  test_sections.py  test_typed_builder.py
tests/ui/: test_ui.py
