[project]
name = "temet-jira"
version = "0.1.0a2"
description = "Comprehensive Jira API client and CLI tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dawid du Toit"}
]
keywords = ["jira", "api", "ai-agent", "cli", "temet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.3.1",
    "rich>=14.3.3",
    "requests>=2.32.5",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "tabulate>=0.10.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "fastmcp>=3.1.1",
]

[project.urls]
Homepage = "https://temet.ai"
Repository = "https://github.com/temet-ai/temet-jira"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "black>=26.3.1",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "types-tabulate>=0.10.0.20260308",
    "types-python-dateutil>=2.9.0.20260305",
    "types-requests>=2.32.4.20260107",
    "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
temet-jira = "temet_jira.cli:jira"
temet-jira-mcp = "temet_jira.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temet_jira"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
